--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <spring-security.version>4.1.0.RELEASE</spring-security.version>
     <hibernate.version>4.3.5.Final</hibernate.version>
     <jackson.version>2.6.5</jackson.version>
+    <spring.security.version>3.2.3.RELEASE</spring.security.version>
     <cglib.version>2.2.2</cglib.version>
   </properties>
 
@@ -132,6 +133,19 @@
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
       <version>1.2.1</version> <!-- makesure correct version here -->
+    </dependency>
+
+    <!-- Spring Security -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${spring.security.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>${spring.security.version}</version>
     </dependency>
 
   </dependencies>
